--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
+    <h1>Calculator</h1>
+    <button id='numBtn'></button>
     <script src="javascript.js"></script>
 </body>
 </html>
