Added buttons for the numbers and symbols

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Calculator</h1>
-    <button id='numBtn'></button>
-    <script src="javascript.js"></script>
+    <div id="container">
+        <div id="display"></div>
+    </div>
+    <script src="javascript.js" defer></script>
 </body>
 </html>
