Decided to add buttons manually to html instead

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 <body>
     <h1>Calculator</h1>
     <div id="container">
-        <div id="display"></div>
+        <div id="screen"></div>
+        <button id="btn" class="num1">1</button>
+        <button id="btn" class="num2">2</button>
+        <button id="btn" class="num3">3</button>
+        <button id="btn" class="num4">4</button>
+        <button id="btn" class="num5">5</button>
+        <button id="btn" class="num6">6</button>
+        <button id="btn" class="num7">7</button>
+        <button id="btn" class="num8">8</button>
+        <button id="btn" class="num9">9</button>
+        <button id="btn" class="sym*">*</button>
+        <button id="btn" class="sym/">/</button>
+        <button id="btn" class="sym+">+</button>
+        <button id="btn" class="sym-">-</button>
+        <button id="btn" class="sym^">^</button>
+        
     </div>
     <script src="javascript.js" defer></script>
 </body>
