Organised the buttons in the correct order and created a grid

--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>Calculator</h1>
+    <div id="screen"></div>
     <div id="container">
-        <div id="screen"></div>
-        <button id="btn" class="num1">1</button>
-        <button id="btn" class="num2">2</button>
-        <button id="btn" class="num3">3</button>
-        <button id="btn" class="num4">4</button>
-        <button id="btn" class="num5">5</button>
-        <button id="btn" class="num6">6</button>
+        
+        <button id="btn" class="clr">clr</button>
+        <button id="btn" class="sympow">^</button>
+        <button id="btn" class="symdiv">/</button>
         <button id="btn" class="num7">7</button>
         <button id="btn" class="num8">8</button>
         <button id="btn" class="num9">9</button>
-        <button id="btn" class="sym*">*</button>
-        <button id="btn" class="sym/">/</button>
-        <button id="btn" class="sym+">+</button>
-        <button id="btn" class="sym-">-</button>
-        <button id="btn" class="sym^">^</button>
+        <button id="btn" class="symmul">*</button>
+        <button id="btn" class="num4">4</button>
+        <button id="btn" class="num5">5</button>
+        <button id="btn" class="num6">6</button>
+        <button id="btn" class="symsin">-</button>
+        <button id="btn" class="num1">1</button>
+        <button id="btn" class="num2">2</button>
+        <button id="btn" class="num3">3</button>
+        <button id="btn" class="symcon">+</button>
+        <button id="btn" class="num0">0</button>
+        <button id="btn" class="sympo">.</button>
+        <button id="btn" class="symeq">=</button>
         
     </div>
     <script src="javascript.js" defer></script>
