--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <div id="container">
         
         <button onclick="clearDisplay()" class="clr">clr</button>
-        <button class="sympow">^</button>
-        <button class="symdiv">/</button>
+        <button onclick="setOperator('^')" class="sympow">^</button>
+        <button onclick="setOperator('/')" class="symdiv">/</button>
         <button onclick="populateDisplay('7')" class="num7">7</button>
         <button onclick="populateDisplay('8')" class="num8">8</button>
         <button onclick="populateDisplay('9')" class="num9">9</button>
-        <button class="symmul">*</button>
+        <button onclick="setOperator('*')" class="symmul">*</button>
         <button onclick="populateDisplay('4')" class="num4">4</button>
         <button onclick="populateDisplay('5')" class="num5">5</button>
         <button onclick="populateDisplay('6')" class="num6">6</button>
-        <button class="symsin">-</button>
+        <button onclick="setOperator('-')" class="symsin">-</button>
         <button onclick="populateDisplay('1')" class="num1">1</button>
         <button onclick="populateDisplay('2')" class="num2">2</button>
         <button onclick="populateDisplay('3')" class="num3">3</button>
-        <button class="symcon">+</button>
-        <button class="num0">0</button>
+        <button onclick="setOperator('+')" class="symcon">+</button>
+        <button onclick="populateDisplay('0')"class="num0">0</button>
         <button class="sympo">.</button>
-        <button class="symeq">=</button>
+        <button onclick="calculate()" class="symeq">=</button>
         
     </div>
     <script src="javascript.js" defer></script>
